# rss-alerter

./: .dockerignore  .env  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-and-push.yaml
src/: run.sh
src/rss_alert/: app.py  history.py  main.py  models.py  telegrambot.py
